--- a/AaronDemo/app/src/main/res/values/strings.xml
+++ b/AaronDemo/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="strTextBottom">我会动哦</string>
     <string name="escape_string">转义符号</string>
     <string name="switch_language">Switch Language</string>
+    <string name="my_actionbar">自定义ActionBar</string>
 </resources>
